--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
 	"request_token_url":"https://api.twitter.com/oauth/request_token",
 	"access_token_url":"https://api.twitter.com/oauth/access_token",
 	"authorize_url":"https://api.twitter.com/oauth/authorize",
-	"consumer_key":"3mU7rIxS5mmnQZ21JCsF29DyQ",
-	"consumer_secret":"Qucg4vz75CUg8gBIgxrSoKdFnCviEFxIsu9xubtKwmLYEcz8yV",
-	"count":5
+	"consumer_key":"",
+	"consumer_secret":"",
+	"count":10
 }
